<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ip_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:hint="@string/ssh_ip_address_hint"
                android:inputType="textUri|textNoSuggestions"
                android:lines="1"/>

            <EditText
                android:id="@+id/port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:hint="@string/ssh_port_hint"
                android:inputType="number"
                android:lines="1"
                android:text="@string/ssh_default_port"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ssh_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:hint="@string/ssh_username_hint"
                android:inputType="text|textNoSuggestions"
                android:lines="1"
                android:text="@string/ssh_default_user"/>

            <EditText
                android:id="@+id/ssh_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:hint="@string/ssh_password_hint"
                android:inputType="textPassword|textNoSuggestions"
                android:lines="1"
                android:text="@string/ssh_default_password"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ssh_command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ssh_command_hint"
                android:inputType="text|textNoSuggestions"
                android:lines="1"
                android:text="@string/ssh_default_command"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/log_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:maxLines="100"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        />
</FrameLayout>
